Edit body margin

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 body {
+    margin: 0px;
     color: #cfb0d7;
     background-color: #6b8530;
     background-image: linear-gradient(#4C75A7, #6B8530);
